# Amplitude-Amplification-Game

./: .gitignore  LICENSE  README.md  environment.yml  preliminary_report_bilingual.md  pyproject.toml  tmp_dynamics_pilot.py  tmp_dynamics_probe2.py  tmp_dynamics_probe5.py  tmp_dynamics_probe6.py
additive/: README.md
additive/code/: README.md
additive/references/: README.md  additive_experiment_plan_and_survey.md
additive/tests/: README.md
configs/full/: ablation.yaml  dynamics.yaml  dynamics_focus.yaml  dynamics_reportable.yaml  equilibrium.yaml  payoff.yaml  sanity.yaml
configs/quick/: ablation.yaml  dynamics.yaml  equilibrium.yaml  payoff.yaml  sanity.yaml
interference_game/: __init__.py  config.py
interference_game/additive/: __init__.py  activations.py  classical_game.py  config.py  markov_special_case.py  quantum_game.py  scoring.py  surrogate.py  targets.py
interference_game/dynamics/: __init__.py  simulate.py
interference_game/equilibrium/: __init__.py  discrete_enumeration.py
interference_game/experiments/: __init__.py  common.py  plot_ablation.py  plot_dynamics.py  plot_equilibrium_distortion.py  plot_payoff_distortion.py  plot_sanity.py  run_ablation.py  run_dynamics.py  run_equilibrium_distortion.py  run_payoff_distortion.py  run_sanity.py
interference_game/models/: __init__.py  baselines.py  exact_game.py  targets.py
interference_game/utils/: __init__.py  io.py  metrics.py
scripts/: generate_preliminary_report_pdf.py
tests/: test_additive_mainline.py  test_core_models.py  test_quick_experiments.py  test_sampling_baseline.py
(+325 files in other folders)
